changed colors to static

--- a/Personal_Website/CSS/styles.css
+++ b/Personal_Website/CSS/styles.css
@@ -1,24 +1,24 @@
 /* Grey69 = 173, 173, 173, 1 */ 
 body { 
 	margin:0;
-}.Background { 
+}
+.Background { 
 	background-color:rgba(0, 0, 0, 1);
 	top:0px;
 	left:0px;
 	width:100%;
 	height:1080px;
 	position:absolute;
-}.Name_Background { 
-	background-color:rgba(173, 173, 173, 1);
+}
+.Name_Background { 
 	width:100%;
 	height:32px;
 	position:absolute;
 	left:0px;
-	background-color: red;
-	animation-name: background-change;
-	animation-duration: 15s;
-	animation-iteration-count: infinite;
-}.Name { 
+	background-color: #32CD32;
+
+}
+.Name { 
 	color:rgba(0, 0, 0, 1);
 	width:100%;
 	height:22px;
@@ -28,24 +28,25 @@ body {
 	text-align:center;
 	font-size:23px;
 	letter-spacing:0;
-}.Navbar_Background { 
-	background-color:rgba(173, 173, 173, 1);
+}
+.Navbar_Background { 
+	background-color: #32CD32;
 	width:100%;
 	height:42px;
 	position:absolute;
 	left:0px;
 	top:31px;
-	animation-name: background-change;
-	animation-duration: 15s;
-	animation-iteration-count: infinite;
-}.Impressum_Background { 
+
+}
+.Impressum_Background { 
 	background-color:rgba(173, 173, 173, 1);
 	width:100%;
 	height:65px;
 	position:absolute;
 	left:0px;
 	top:1015px;
-}.Impressum { 
+}
+.Impressum { 
 	color:rgba(0, 0, 0, 1);
 	width:127px;
 	height:33px;
@@ -56,7 +57,8 @@ body {
 	text-align:left;
 	font-size:25px;
 	letter-spacing:0;
-}.Moodboard_Background { 
+}
+.Moodboard_Background { 
 	background-color:rgba(212, 212, 212, 1);
 	width:100%;
 	height:943px;
@@ -79,9 +81,7 @@ body {
   text-decoration: none;
   font-size: 20px;
   position:relative;
-	animation-name: color-change;
-	animation-duration: 15s;
-	animation-iteration-count: infinite;
+
 }
 
 .topnav a:hover {
@@ -92,29 +92,4 @@ body {
 .topnav a.active {
   background-color: #33cc33;
   color: white;
-  animation-name: active-change;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
 }
-@keyframes background-change {
-  0%   {background-color: red;}
-  25%  {background-color: orange;}
-  50%  {background-color: lightblue;}
-  90% {background-color: green;}
-  100% {background-color:red;}
-}
-@keyframes color-change {
-  0%   {color: lime;}
-  25%  {color: blue;}
-  50%  {color: red;}
-  90% {color: black;}
-  100% {color:lime;}
-}
-@keyframes active-change {
-  0%   {background-color: red;}
-  25%  {background-color: orange;}
-  50%  {background-color: lightblue;}
-  90% {background-color: green;}
-  100% {background-color: red;}
-}
- 
