--- a/Personal_Website/pages/CSS/styles.css
+++ b/Personal_Website/pages/CSS/styles.css
@@ -11,12 +11,12 @@ body {
 	position:absolute;
 }
 .Name_Background { 
-	background-color:rgba(173, 173, 173, 1);
+	background-color:#32CD32;
 	width:100%;
 	height:32px;
 	position:absolute;
 	left:0px;
-	background-color: red;
+	
 
 }
 .Name { 
@@ -31,7 +31,7 @@ body {
 	letter-spacing:0;
 }
 .Navbar_Background { 
-	background-color:rgba(173, 173, 173, 1);
+	background-color:#32CD32;
 	width:100%;
 	height:42px;
 	position:absolute;
