--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -23,11 +23,11 @@ body {
   }
 
 .Background { 
-	background-color:rgba(0, 0, 0, 1);
+	background-color:rgb(114, 109, 109);
 	top:0px;
 	left:0px;
 	width:100%;
-	height:1080px;
+	height:100%;
 	position:absolute;
 }
 
