--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,7 +27,7 @@ body {
 	top:0px;
 	left:0px;
 	width:100%;
-	height:1080px;
+	height:100%;
 	position:absolute;
 }
 
@@ -37,6 +37,7 @@ body {
 	position:relative;
 	left:0px;
 	background-color: #32CD32;
+	z-index:1;
 }
 .Name { 
 	color:rgba(0, 0, 0, 1);
@@ -49,14 +50,16 @@ body {
 	right:2%;
 	font-size:23px;
 	letter-spacing:0;
+	z-index:1;
 }
 
 .Navbar_Background { 
 	background-color: #32CD32;
 	width:100%;
-	height:25px;
+	height:24px;
 	position:relative;
 	left:0px;
+	z-index:1;
 }
 
 .Impressum_Background { 
@@ -66,6 +69,7 @@ body {
 	position:absolute;
 	left:0px;
 	bottom:0;
+	z-index:1;
 }
 .Impressum { 
 	color:rgba(0, 0, 0, 1);
@@ -78,20 +82,26 @@ body {
 	text-align:left;
 	font-size:25px;
 	letter-spacing:0;
+	z-index: 1;
 }
 
 .Moodboard_Background { 
 	background-color:rgba(212, 212, 212, 1);
 	width:100%;
-	height:959px;
+	height:100%;
 	position:absolute;
 	left:0px;
-	top:56px;
+	bottom:0;
+}
+.Moodboard {
+	position: relative;
+	top: 56px;
 }
 
 .topnav {
   overflow: hidden;
   background-color: rgba(105,105,105,0);
+  z-index: 1;
 }
 .topnav a {
   float: left;
@@ -104,6 +114,7 @@ body {
   text-decoration: none;
   font-size: 20px;
   position:relative;
+  z-index: 1;
 }
 .topnav a:hover {
   background-color: #ddd;
