--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -1,6 +1,7 @@
 /* Grey69 = 173, 173, 173, 1 */ 
 body { 
 	margin:0;
+	font-family: Roboto;
 }
 .Landscape-Content {
 	display: block;
@@ -112,13 +113,29 @@ body {
 	width: 40%;
 	top: 50%;
 	left: 50%;
+	border-radius: 15px;
 	transform: translate(-50%, -50%);
-	background-color: white;
+	background-color: rgba(128, 128, 128, 1);
 	padding: 20px;
 	z-index: -1;
 }
 .GMail-Logo {
+	position: absolute;
 	height: 256px;
 	width: auto;
+	top: 25%;
+	left: 15%;
 	cursor: pointer;
 }
+input, textarea {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	line-height: 1.5;
+	font-size: 16px;
+	display: block;
+  }
+  textarea {
+	width: 100%;
+	height: 160px;
+  }
