--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -85,7 +85,7 @@ body {
   overflow: hidden;
   background-color: rgba(105,105,105,0);
 }
-.topnav a {
+.topnav .nav-link {
   float: left;
   height:28px;
   color:white;
@@ -97,11 +97,11 @@ body {
   font-size: 20px;
   position:relative;
 }
-.topnav a:hover {
+.topnav .nav-link:hover {
   background-color: #ddd;
   color: black;
 }
-.topnav a.active {
+.topnav .nav-link.active {
   background-color: #126301;
   color: white;
 }
@@ -135,8 +135,17 @@ input, textarea {
 	background-color: black;
 	font-size: 16px;
 	display: block;
-  }
-  textarea {
+}
+textarea {
 	width: 100%;
 	height: 160px;
-  }
+}
+
+.GitHub-Logo {
+	position: absolute;
+	height: 30%;
+	width: auto;
+	top: 30%;
+	right: 15%;
+	cursor: pointer;
+}
