--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -92,11 +92,9 @@ body {
 }
 
 .topnav {
-  overflow: hidden;
   background-color: rgba(105,105,105,0);
-  z-index: 1;
 }
-.topnav a {
+.topnav .nav-link {
   float: left;
   height:28px;
   color:white;
@@ -108,14 +106,19 @@ body {
   position:relative;
   z-index: 1;
 }
-.topnav a:hover {
+.topnav .nav-link:hover {
   background-color: #ddd;
   color: black;
 }
-.topnav a.active {
+.topnav .nav-link.active {
   background-color: #126301;
   color: white;
 }
+.topnav .nav-icon {
+	display: none;
+	z-index: 1;
+}
+
 @media screen and (max-width: 910px) {
 	.topnav .nav-link {
 	  display: none;
@@ -123,8 +126,9 @@ body {
 	.topnav .nav-icon {
 		display: block;
 		position: relative;
-		padding-right: 15px;
-		font-size: 30px;
+		float: left;
+		padding: 0px 5px;
+		font-size: 37px;
 	  	color: white;
 	  	cursor: pointer;
 	  	display: block;
@@ -132,14 +136,11 @@ body {
 	.topnav.responsive {
 		position: relative;
 	  }
-	
 	.topnav.responsive .nav-link {
 		display: block;
 		width: 100%;
 		text-align: center;
 		background-color:rgb(114, 109, 109);
-
-
 	  }
   }
 .button-lang {
