--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -137,7 +137,7 @@ body {
 		display: block;
 		width: 100%;
 		text-align: center;
-		background-color:rgb(114, 109, 109,0.71);
+		background-color:rgb(212, 212, 212, 0.71);
 	  }
   }
 .button-lang {
