--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -122,6 +122,7 @@ body {
 		display: block;
 		position: relative;
 		float: left;
+		top: 6px;
 		padding: 0px 5px;
 		font-size: 37px;
 	  	color: white;
