--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -116,7 +116,6 @@ body {
 		display: block;
 		position: relative;
 		float: left;
-		top: 6px;
 		padding: 0px 5px;
 		font-size: 37px;
 	  	color: white;
@@ -130,6 +129,7 @@ body {
 		display: block;
 		width: 100%;
 		text-align: center;
+		float: right;
 		background-color:rgb(114, 109, 109,0.71);
 	  }
   }
