--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -149,7 +149,7 @@ body {
 .GMail-Form {
 	display: none;
 	position: fixed;
-	width: 40%;
+	width: 70%;
 	top: 50%;
 	left: 50%;
 	border-radius: 15px;
@@ -187,6 +187,9 @@ textarea {
 .button-submit {
 	background-color: gray;
 	float: left;
+}
+.button-clear {
+	background-color: gray;
 }
 .button-cancel {
 	background-color: gray;
