fixed text-color in input and textarea

--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -177,6 +177,7 @@ input, textarea {
 	padding: 0;
 	width: 100%;
 	line-height: 1.5;
+	color: white;
 	background-color: black;
 	font-size: 16px;
 	display: block;
