--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -177,8 +177,7 @@ input, textarea {
 	padding: 0;
 	width: 100%;
 	line-height: 1.5;
-	color: white;
-	background-color: black;
+	background-color: aliceblue;
 	font-size: 16px;
 	display: block;
 }
