--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -177,7 +177,7 @@ input, textarea {
 	padding: 0;
 	width: 100%;
 	line-height: 1.5;
-	background-color: aliceblue;
+	background-color:rgb(114, 109, 109) ;
 	font-size: 16px;
 	display: block;
 }
