--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -5,6 +5,35 @@ body {
 	display: block;
 }
 
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9); /* Semi-transparent black overlay */
+	display: flex;
+    justify-content: center;
+	z-index: 100;
+}
+.loading-icon {
+    position: relative;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 4px solid #32CD32;
+    border-top: 4px solid #3498db;
+    animation: spin 1s linear infinite;
+	display: block;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 /* Portrait mode styling */
 @media screen and (orientation: portrait) {
 	.Content .Landscape {
