--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -90,25 +90,27 @@ body {
 	position: relative;
 }
 
-.Impressum_Background { 
+.Rechtliches_Background { 
 	background-color:rgba(173, 173, 173, 1);
 	width:100%;
-	height:65px;
+	height:50px;
 	position:absolute;
 	bottom:0;
+	z-index:1;
+	display: flex;
+    justify-content: center;
+    z-index: 2;
 }
-.Impressum { 
+.Rechtliches { 
 	color:rgba(0, 0, 0, 1);
 	width:127px;
 	height:33px;
 	position:absolute;
-	left:50%;
-	transform: translateX(-50%);
-	bottom:15px;
-	font-family:Roboto;
+	bottom:7px;
 	text-align:center;
 	font-size:25px;
 	letter-spacing:0;
+	z-index: 1;
 }
 
 .topnav {
