--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -55,12 +55,6 @@ body {
 	position:absolute;
 }
 
-.Name_Background { 
-	width:100%;
-	height:32px;
-	position:relative;
-	background-color: #32CD32;
-}
 .Name { 
 	color:rgba(0, 0, 0, 1);
 	width:100%;
@@ -77,7 +71,7 @@ body {
 .Navbar_Background { 
 	background-color: #32CD32;
 	width:100%;
-	height:24px;
+	height:56px;
 	position:relative;
 }
 
@@ -175,6 +169,8 @@ body {
 .button-lang.active {
 	background-color: #32CD32;
 }
+
+/* Rechtliches.html specific /*
 
 /* Kontakt.html specific */
 .GMail-Form {
