--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -46,6 +46,9 @@ body {
 	  	background-color: black;
 	  	color: white;
 	}
+	.Title.responsive {
+		display: none;
+	}
   }
 
 .Background { 
@@ -82,6 +85,8 @@ body {
     text-align: center;
 	font-size: 31px;
 	position: absolute;
+	top: auto;
+	transition: top 0.4s ease, transform 0.4s ease;
 }
 
 .Rechtliches_Background { 
@@ -159,8 +164,11 @@ body {
 		float: right;
 		background-color:rgb(114, 109, 109,0.71);
 	  }
+	.topnav.responsive .nav-link.active {
+		background-color:rgb(92, 88, 88);;
+	}
 	.Title.responsive {
-		top: 1%;
+		transform: translateY(calc(-100% - 10px));
 	}
   }
 .button-lang {
