--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -70,7 +70,7 @@ body {
 	font-size: 31px;
 	position: absolute;
 	top: auto;
-	transition: top 0.4s ease, transform 0.4s ease;
+	transition: top 0.4s ease, transform 0.4s ease, opacity 0.5s ease;
 }
 
 .Rechtliches_Background { 
