--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -140,10 +140,16 @@ body {
 /* responsive styling */
 @media screen and (max-width: 910px) {
 	.topnav .nav-link {
-	  display: none;
+	  display: block;
+	  visibility: hidden;
+	  float: right;
+	  opacity: 0;
+	  top: 0;
+	  transition: top 0.4s ease, opacity 0.5s ease;
+	  transform: translateY(+200%);
 	}
 	.topnav .nav-icon {
-		display: block;
+		display: none;
 		position: relative;
 		float: left;
 		padding: 0px 5px;
@@ -157,10 +163,13 @@ body {
 	  }
 	.topnav.responsive .nav-link {
 		display: block;
+		visibility: visible;
+		top: 111px;
 		width: 100%;
 		text-align: center;
-		float: right;
 		background-color:rgb(212, 212, 212, 0.71);
+		transform: translateY(-200%);
+		opacity: 1;
 	}
 	.topnav.responsive .nav-link.active {
 		background-color:rgb(78, 74, 74, 0.71);
