--- a/pages/CSS/styles.css
+++ b/pages/CSS/styles.css
@@ -244,6 +244,7 @@ textarea {
 	  }
 	.topnav.responsive .nav-link {
 		display: block;
+		padding: 14px 0;
 		visibility: visible;
 		top: 111px;
 		width: 100%;
