--- a/pages/CSS/Lebenslauf.css
+++ b/pages/CSS/Lebenslauf.css
@@ -2,23 +2,23 @@
     position: relative;   
     display: grid;
     grid-template-columns: 1fr 1fr;
-    top: 42px;
     gap: 20px;
-    height: 82%;
-    width: 100%;
     padding: 0 5%;
+    top: 42px;
     box-sizing: border-box;
-    background-color: none;
+    background-color: transparent;
+    height: 80vh;
 }
 
-.Lebenslauf  {
-    background-color:rgba(114, 109, 109, 1);
-	width:100%;
-	height:100%;
+.Lebenslauf, .Zeugnis {
+    background-color: rgba(114, 109, 109, 1);
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 }
 
 embed {
